--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -8,38 +8,18 @@
 	\kactlimport{lineIntersection.h}
 	\kactlimport{sideOf.h}
 	\kactlimport{OnSegment.h}
-	\kactlimport{linearTransformation.h}
-	% \kactlimport{LineProjectionReflection.h}
-	\kactlimport{Angle.h}
 
 \section{Circles}
 	\kactlimport{CircleIntersection.h}
 	\kactlimport{CircleTangents.h}
-	% \kactlimport{CircleLine.h}
-	\kactlimport{CirclePolygonIntersection.h}
+	\kactlimport{CircleLine.h}
 	\kactlimport{circumcircle.h}
-	\kactlimport{MinimumEnclosingCircle.h}
 
 \section{Polygons}
 	\kactlimport{InsidePolygon.h}
 	\kactlimport{PolygonArea.h}
-	\kactlimport{PolygonCenter.h}
-	\kactlimport{PolygonCut.h}
-	% \kactlimport{PolygonUnion.h}
 	\kactlimport{ConvexHull.h}
 	\kactlimport{HullDiameter.h}
-	\kactlimport{PointInsideHull.h}
-	\kactlimport{LineHullIntersection.h}
 
 \section{Misc. Point Set Problems}
 	\kactlimport{ClosestPair.h}
-	% \kactlimport{ManhattanMST.h}
-	\kactlimport{kdTree.h}
-	% \kactlimport{DelaunayTriangulation.h}
-	\kactlimport{FastDelaunay.h}
-
-\section{3D}
-	\kactlimport{PolyhedronVolume.h}
-	\kactlimport{Point3D.h}
-	\kactlimport{3dHull.h}
-	\kactlimport{sphericalDistance.h}
