--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -1,47 +1,10 @@
 \chapter{Graph}
 
 \section{Fundamentals}
-	\kactlimport{BellmanFord.h}
-	\kactlimport{FloydWarshall.h}
 	\kactlimport{TopoSort.h}
 
 \section{Network flow}
-	\kactlimport{PushRelabel.h}
-	\kactlimport{MinCostMaxFlow.h}
-	\kactlimport{EdmondsKarp.h}
-	% \kactlimport{Dinic.h}
-	\kactlimport{MinCut.h}
-	\kactlimport{GlobalMinCut.h}
-	\kactlimport{GomoryHu.h}
-
-\section{Matching}
-	\kactlimport{hopcroftKarp.h}
-	\kactlimport{DFSMatching.h}
-	\kactlimport{MinimumVertexCover.h}
-	\kactlimport{WeightedMatching.h}
-	\kactlimport{GeneralMatching.h}
-
-\section{DFS algorithms}
-	\kactlimport{SCC.h}
-	\kactlimport{BiconnectedComponents.h}
-	\kactlimport{2sat.h}
-	\kactlimport{EulerWalk.h}
-
-\section{Coloring}
-	\kactlimport{EdgeColoring.h}
-
-\section{Heuristics}
-	\kactlimport{MaximalCliques.h}
-	\kactlimport{MaximumClique.h}
-	\kactlimport{MaximumIndependentSet.h}
-
-\section{Trees}
-	\kactlimport{BinaryLifting.h}
-	\kactlimport{LCA.h}
-	\kactlimport{CompressTree.h}
-	\kactlimport{HLD.h}
-	\kactlimport{LinkCutTree.h}
-	\kactlimport{DirectedMST.h}
+	\kactlimport{Dinic.h}
 
 \section{Math}
 	\subsection{Number of Spanning Trees}
