Remove kactl branding

--- a/content/hackpack.tex
+++ b/content/hackpack.tex
@@ -2,8 +2,8 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{KTH Royal Institute of Technology}{kth}
-\team{Omogen Heap}{Simon Lindholm, Johan Sannemo, Mårten Wiman}
+\university{UCF}{University of Central Florida}{ucf}
+\team{Junior Varsity Reference Code}{Compiled by:\; Brian G, Thomas M, Tyler M, Andy P, Sachin S, Erick W}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
 \contest{\ }{\today}
 % \enablecolors
