--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -2,7 +2,7 @@
 
 \section{Fundamentals}
 	\kactlimport{TopoSort.h}
-	\kactlimport{dsu.h}
+	\kactlimport{DSU.h}
 
 \section{Network flow}
 	\kactlimport{Dinic.h}
