updated graphs section on the pdf

--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -1,8 +1,16 @@
 \chapter{Graph}
 
 \section{Fundamentals}
+	\kactlimport{ShortestPath.h}
+	\kactlimport{Dijkstra.h}
+	\kactlimport{BellmanFord.h}
+	\kactlimport{FloydWarshall.h}
+	\kactlimport{TwoColor.h}
 	\kactlimport{TopoSort.h}
 	\kactlimport{dsu.h}
+
+\section{Trees}
+	\kactlimport{lca.h}
 
 \section{Network flow}
 	\kactlimport{Dinic.h}
