updated number theory section pdf

--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -1,5 +1,9 @@
 \chapter{Number theory}
 
+\section{Fundamentals}
+	\kactlimport(Eratosthenes.h)
+	\kactlimport(Expo.h)
+
 \section{Divisibility}
 
 	\subsection{Bézout's identity}
