ok so like I might be a bit of a dumbass

--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -1,8 +1,8 @@
 \chapter{Number theory}
 
 \section{Fundamentals}
-	\kactlimport(Eratosthenes.h)
-	\kactlimport(Expo.h)
+	\kactlimport{Eratosthenes.h}
+	\kactlimport{Expo.h}
 
 \section{Divisibility}
 
